# waterwaymap.org-river

./: .editorconfig  .gitignore  CHANELOG  Cargo.toml  README.md
contrib/: import_geojson.sh
src/: geojson-zstd-dictionary-30K  html-zstd-dictionary-10K  main.rs  utils.rs
static/css/: style.css
static/js/: river_map.js
templates/: 404.j2  admin_region.j2  admin_region_index.j2  base.j2  index.j2  name_index.j2  name_index_index.j2  redirect.j2  river.j2  search.j2  sitemap.j2  sitemap_index.j2
