[package]
name = "waterwaymaporg_river"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "wwm-river"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive"] }
minijinja = { version = "2.7.0", features = ["loader"] }
rayon = "1.10.0"
rusqlite = { version = "*", features = ["load_extension"] }

libsqlitesite = { path = "/home/amanda/personal/sqlitesite/libsqlitesite/" }
serde = "1.0.217"
serde_json = "1.0.138"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.14"
indicatif = "0.18.2"
walkdir = "2.5.0"
env_logger = "0.11.6"
log = "0.4.26"
num-format = "0.4.4"
zstd = "0.13.3"
postgres = { version = "0.19.10", features = ["with-serde_json-1"] }
itertools = "0.14.0"
ordered-float = "5.0.0"
